# gd_bot

./: Cargo.toml  compile_error.txt
src/: cl_utils.rs  gpu_math.rs  kernels  kernels.c  main.rs  network.rs  test_comp
src/assets/shaders/color_mult/: fragment.glsl
src/assets/shaders/rounded_rect/: fragment.glsl
src/assets/shaders/sdf/: fragment.glsl  vertex.glsl
src/assets/shaders/spin_circle/: fragment.glsl
src/assets/shaders/test/: fragment.glsl  vertex.glsl
src/assets/shaders/test_n/: fragment.glsl
src/network/: cpu.rs  gpu.rs  mod.rs
src/tests/: mod.rs  test_2d.rs
src/tests/ac/: mod.rs  test_ac.rs
