[package]
name = "gd-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.4"
ocl = "0.19.7"
rand = "0.8.5"
RustUI = {version = "*", path = "../RustUI - Copy (2)"}
parking_lot = "0.12.3"
